<resources>
    <string name="app_name">HomeTask3</string>
    <string name="text_card">Карта №7898769
Специалист</string>
    <string name="toolbar_text_personal_profile">Личный профиль</string>
    <string name="personal_data">Личные данные</string>
    <string name="text_name">Имя</string>
    <string name="name">Анастасия</string>
    <string name="text_surname">Фамилия</string>
    <string name="text_email">E-mail</string>
    <string name="email">anykee.box@gmail.ru</string>
    <string name="text_login">Логин</string>
    <string name="login">HIE023UOI88</string>
    <string name="text_region">Ваш регион</string>
    <string name="region">Санкт-Петербург</string>
    <string name="surname">Антонина</string>
    <string name="exit_text">Выйти из аккаунта</string>
</resources>