<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="360dp"
    android:layout_height="527dp"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/custom_canvas"
        android:layout_width="360dp"
        android:layout_height="527dp" />

    <TextView
        android:id="@+id/custom_personal_data"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="236dp"
        android:layout_marginBottom="481dp"
        android:text="@string/personal_data"
        android:layout_alignStart="@+id/custom_canvas"
        android:layout_alignTop="@+id/custom_canvas"
        android:layout_alignEnd="@+id/custom_canvas"
        android:layout_alignBottom="@+id/custom_canvas"
        />

    <TextView
        android:id="@+id/custom_row_name"
        android:layout_alignStart="@+id/custom_canvas"
        android:layout_alignTop="@+id/custom_canvas"
        android:layout_alignEnd="@+id/custom_canvas"
        android:layout_alignBottom="@+id/custom_canvas"
        android:layout_width="360dp"
        android:layout_height="72dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="395dp" />

    <TextView
        android:id="@+id/custom_data_name"
        style="@style/TextStyle2"
        android:layout_alignStart="@+id/custom_row_name"
        android:layout_alignTop="@+id/custom_row_name"
        android:layout_alignEnd="@+id/custom_row_name"
        android:layout_alignBottom="@+id/custom_row_name"
        android:layout_width="80dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="264dp"
        android:layout_marginBottom="9dp" />

    <TextView
        android:id="@+id/custom_name"
        android:layout_alignStart="@+id/custom_row_name"
        android:layout_alignTop="@+id/custom_row_name"
        android:layout_alignEnd="@+id/custom_row_name"
        android:layout_alignBottom="@+id/custom_row_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="315dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="6sp"
        android:text="@string/text_name"
        android:textColor="@color/warm_grey"
        android:textSize="14sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/custom_row_surname"
        android:layout_alignStart="@+id/custom_canvas"
        android:layout_alignTop="@+id/custom_canvas"
        android:layout_alignEnd="@+id/custom_canvas"
        android:layout_alignBottom="@+id/custom_canvas"
        android:layout_width="360dp"
        android:layout_height="72dp"
        android:layout_marginTop="132dp"
        android:layout_marginBottom="323dp" />

    <TextView
        android:id="@+id/custom_surname"
        android:layout_alignStart="@+id/custom_row_surname"
        android:layout_alignTop="@+id/custom_row_surname"
        android:layout_alignEnd="@+id/custom_row_surname"
        android:layout_alignBottom="@+id/custom_row_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="283dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="6sp"
        android:text="@string/text_surname"
        android:textColor="@color/warm_grey"
        android:textSize="14sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/custom_data_surname"
        style="@style/TextStyle2"
        android:layout_alignStart="@+id/custom_row_surname"
        android:layout_alignTop="@+id/custom_row_surname"
        android:layout_alignEnd="@+id/custom_row_surname"
        android:layout_alignBottom="@+id/custom_row_surname"
        android:layout_width="73dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="271dp"
        android:layout_marginBottom="9dp" />

    <TextView
        android:id="@+id/custom_row_email"
        android:layout_alignStart="@+id/custom_canvas"
        android:layout_alignTop="@+id/custom_canvas"
        android:layout_alignEnd="@+id/custom_canvas"
        android:layout_alignBottom="@+id/custom_canvas"
        android:layout_width="360dp"
        android:layout_height="72dp"
        android:layout_marginTop="204dp"
        android:layout_marginBottom="251dp" />

    <TextView
        android:id="@+id/custom_email"
        android:layout_alignStart="@+id/custom_row_email"
        android:layout_alignTop="@+id/custom_row_email"
        android:layout_alignEnd="@+id/custom_row_email"
        android:layout_alignBottom="@+id/custom_row_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="302dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="6sp"
        android:text="@string/text_email"
        android:textColor="@color/warm_grey"
        android:textSize="14sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/custom_data_email"
        style="@style/TextStyle2"
        android:layout_alignStart="@+id/custom_row_email"
        android:layout_alignTop="@+id/custom_row_email"
        android:layout_alignEnd="@+id/custom_row_email"
        android:layout_alignBottom="@+id/custom_row_email"
        android:layout_width="155dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="189dp"
        android:layout_marginBottom="9dp" />

    <TextView
        android:id="@+id/custom_row_login"
        android:layout_alignStart="@+id/custom_canvas"
        android:layout_alignTop="@+id/custom_canvas"
        android:layout_alignEnd="@+id/custom_canvas"
        android:layout_alignBottom="@+id/custom_canvas"
        android:layout_width="360dp"
        android:layout_height="72dp"
        android:layout_marginTop="276dp"
        android:layout_marginBottom="179dp" />

    <TextView
        android:id="@+id/custom_login"
        android:layout_alignStart="@+id/custom_row_login"
        android:layout_alignTop="@+id/custom_row_login"
        android:layout_alignEnd="@+id/custom_row_login"
        android:layout_alignBottom="@+id/custom_row_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="304dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="6sp"
        android:text="@string/text_login"
        android:textColor="@color/warm_grey"
        android:textSize="14sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/custom_data_login"
        style="@style/TextStyle2"
        android:layout_alignStart="@+id/custom_row_login"
        android:layout_alignTop="@+id/custom_row_login"
        android:layout_alignEnd="@+id/custom_row_login"
        android:layout_alignBottom="@+id/custom_row_login"
        android:layout_width="96dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="248dp"
        android:layout_marginBottom="9dp" />

    <TextView
        android:id="@+id/custom_row_region"
        android:layout_alignStart="@+id/custom_canvas"
        android:layout_alignTop="@+id/custom_canvas"
        android:layout_alignEnd="@+id/custom_canvas"
        android:layout_alignBottom="@+id/custom_canvas"
        android:layout_width="360dp"
        android:layout_height="72dp"
        android:layout_marginTop="348dp"
        android:layout_marginBottom="107dp" />

    <TextView
        android:id="@+id/custom_region"
        android:layout_alignStart="@+id/custom_row_region"
        android:layout_alignTop="@+id/custom_row_region"
        android:layout_alignEnd="@+id/custom_row_region"
        android:layout_alignBottom="@+id/custom_row_region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="267dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="6sp"
        android:text="@string/text_region"
        android:textColor="@color/warm_grey"
        android:textSize="14sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/custom_data_region"
        style="@style/TextStyle2"
        android:layout_alignStart="@+id/custom_row_region"
        android:layout_alignTop="@+id/custom_row_region"
        android:layout_alignEnd="@+id/custom_row_region"
        android:layout_alignBottom="@+id/custom_row_region"
        android:layout_width="130dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="214dp"
        android:layout_marginBottom="9dp" />

    <TextView
        android:id="@+id/custom_text_exit"
        style="@style/TextStyle2"
        android:layout_alignStart="@+id/custom_canvas"
        android:layout_alignTop="@+id/custom_canvas"
        android:layout_alignEnd="@+id/custom_canvas"
        android:layout_alignBottom="@+id/custom_canvas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="452dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="51dp"
        android:text="@string/exit_text" />

    <ImageView
        android:id="@+id/custom_exit"
        android:layout_alignStart="@+id/custom_canvas"
        android:layout_alignTop="@+id/custom_canvas"
        android:layout_alignEnd="@+id/custom_canvas"
        android:layout_alignBottom="@+id/custom_canvas"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="449dp"
        android:layout_marginEnd="320dp"
        android:layout_marginBottom="54dp"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/ic_menu_exit" />

    <include
        android:id="@+id/custom_canvas_edit"
        layout="@layout/edit_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="320dp"
        android:layout_marginTop="372dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="131dp"
        android:background="@drawable/r_edit"
        android:layout_alignStart="@+id/custom_canvas"
        android:layout_alignTop="@+id/custom_canvas"
        android:layout_alignEnd="@+id/custom_canvas"
        android:layout_alignBottom="@+id/custom_canvas" />


</RelativeLayout>