<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:layout_width="360dp"
        android:layout_height="201dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/rectangle_toolbar"
        android:layout_width="329dp"
        android:layout_height="104dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="17dp"
        android:background="@drawable/rectangle_toolbar"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="241dp"
        android:layout_marginBottom="16dp"
        android:src="@mipmap/ic_profile_spechialist"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_toolbar"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_toolbar"
        app:layout_constraintStart_toStartOf="@+id/rectangle_toolbar"
        app:layout_constraintTop_toTopOf="@+id/rectangle_toolbar" />

    <ImageView
        android:id="@+id/rectangle_edit"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="320dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="137dp"
        android:background="@drawable/rectangle_edit"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/edit"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:src="@drawable/ic_edit_black_24_px"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_edit"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_edit"
        app:layout_constraintStart_toStartOf="@+id/rectangle_edit"
        app:layout_constraintTop_toTopOf="@+id/rectangle_edit" />

    <ImageView
        android:id="@+id/rectangle_arrow_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="320dp"
        android:layout_marginBottom="137dp"
        android:background="@drawable/rectangle_edit"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/arrow_back"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:src="@drawable/ic_arrow_back_black_24_px"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_arrow_back"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_arrow_back"
        app:layout_constraintStart_toStartOf="@+id/rectangle_arrow_back"
        app:layout_constraintTop_toTopOf="@+id/rectangle_arrow_back" />

    <TextView
        android:id="@+id/text_card_and_spec"
        style="@style/TextStyle2"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/rectangle_toolbar"
        android:text="@string/text_card"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_toolbar"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_toolbar"
        app:layout_constraintStart_toStartOf="@id/rectangle_toolbar"
        app:layout_constraintTop_toTopOf="@+id/rectangle_toolbar" />

    <TextView
        android:id="@+id/text_profile"
        android:layout_width="166dp"
        android:layout_height="28dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="123dp"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="8sp"
        android:text="@string/toolbar_text_personal_profile"
        android:textColor="@color/greyish_brown"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TextView
        android:id="@+id/canvas"
        android:layout_width="360dp"
        android:layout_height="527dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/personal_data"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="236dp"
        android:layout_marginBottom="481dp"
        android:text="@string/personal_data"
        app:layout_constraintBottom_toBottomOf="@+id/canvas"
        app:layout_constraintEnd_toEndOf="@+id/canvas"
        app:layout_constraintStart_toStartOf="@+id/canvas"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/row_name"
        android:layout_width="360dp"
        android:layout_height="72dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="395dp"
        app:layout_constraintBottom_toBottomOf="@+id/canvas"
        app:layout_constraintEnd_toEndOf="@+id/canvas"
        app:layout_constraintStart_toStartOf="@+id/canvas"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/data_name"
        style="@style/TextStyle2"
        android:layout_width="80dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="264dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toBottomOf="@+id/row_name"
        app:layout_constraintEnd_toEndOf="@+id/row_name"
        app:layout_constraintStart_toStartOf="@+id/row_name"
        app:layout_constraintTop_toTopOf="@+id/row_name" />

    <TextView
        android:id="@+id/name"
        android:layout_width="29dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="315dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="6sp"
        android:text="@string/text_name"
        android:textColor="@color/warm_grey"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/row_name"
        app:layout_constraintEnd_toEndOf="@+id/row_name"
        app:layout_constraintStart_toStartOf="@+id/row_name"
        app:layout_constraintTop_toTopOf="@+id/row_name" />

    <TextView
        android:id="@+id/row_surname"
        android:layout_width="360dp"
        android:layout_height="72dp"
        android:layout_marginTop="132dp"
        android:layout_marginBottom="323dp"
        app:layout_constraintBottom_toBottomOf="@+id/canvas"
        app:layout_constraintEnd_toEndOf="@+id/canvas"
        app:layout_constraintStart_toStartOf="@+id/canvas"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="283dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="6sp"
        android:text="@string/text_surname"
        android:textColor="@color/warm_grey"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/row_surname"
        app:layout_constraintEnd_toEndOf="@+id/row_surname"
        app:layout_constraintStart_toStartOf="@+id/row_surname"
        app:layout_constraintTop_toTopOf="@+id/row_surname" />

    <TextView
        android:id="@+id/data_surname"
        style="@style/TextStyle2"
        android:layout_width="73dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="271dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toBottomOf="@+id/row_surname"
        app:layout_constraintEnd_toEndOf="@+id/row_surname"
        app:layout_constraintStart_toStartOf="@+id/row_surname"
        app:layout_constraintTop_toBottomOf="@+id/row_name" />

    <TextView
        android:id="@+id/row_email"
        android:layout_width="360dp"
        android:layout_height="72dp"
        android:layout_marginTop="204dp"
        android:layout_marginBottom="251dp"
        app:layout_constraintBottom_toBottomOf="@+id/canvas"
        app:layout_constraintEnd_toEndOf="@+id/canvas"
        app:layout_constraintStart_toStartOf="@+id/canvas"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/email"
        android:layout_width="42dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="302dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="6sp"
        android:text="@string/text_email"
        android:textColor="@color/warm_grey"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/row_email"
        app:layout_constraintEnd_toEndOf="@+id/row_email"
        app:layout_constraintStart_toStartOf="@+id/row_email"
        app:layout_constraintTop_toTopOf="@+id/row_email" />

    <TextView
        android:id="@+id/data_email"
        style="@style/TextStyle2"
        android:layout_width="155dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="189dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toBottomOf="@+id/row_email"
        app:layout_constraintEnd_toEndOf="@+id/row_email"
        app:layout_constraintStart_toStartOf="@+id/row_email"
        app:layout_constraintTop_toBottomOf="@+id/row_surname" />

    <TextView
        android:id="@+id/row_login"
        android:layout_width="360dp"
        android:layout_height="72dp"
        android:layout_marginTop="276dp"
        android:layout_marginBottom="179dp"
        app:layout_constraintBottom_toBottomOf="@+id/canvas"
        app:layout_constraintEnd_toEndOf="@+id/canvas"
        app:layout_constraintStart_toStartOf="@+id/canvas"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="304dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="6sp"
        android:text="@string/text_login"
        android:textColor="@color/warm_grey"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/row_login"
        app:layout_constraintEnd_toEndOf="@+id/row_login"
        app:layout_constraintStart_toStartOf="@+id/row_login"
        app:layout_constraintTop_toTopOf="@+id/row_login" />

    <TextView
        android:id="@+id/data_login"
        style="@style/TextStyle2"
        android:layout_width="96dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="248dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toBottomOf="@+id/row_login"
        app:layout_constraintEnd_toEndOf="@+id/row_login"
        app:layout_constraintStart_toStartOf="@+id/row_login"
        app:layout_constraintTop_toTopOf="@+id/row_login" />

    <TextView
        android:id="@+id/row_region"
        android:layout_width="360dp"
        android:layout_height="72dp"
        android:layout_marginTop="348dp"
        android:layout_marginBottom="107dp"
        app:layout_constraintBottom_toBottomOf="@+id/canvas"
        app:layout_constraintEnd_toEndOf="@+id/canvas"
        app:layout_constraintStart_toStartOf="@+id/canvas"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="267dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="6sp"
        android:text="@string/text_region"
        android:textColor="@color/warm_grey"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/row_region"
        app:layout_constraintEnd_toEndOf="@+id/row_region"
        app:layout_constraintStart_toStartOf="@+id/row_region"
        app:layout_constraintTop_toTopOf="@+id/row_region" />

    <TextView
        android:id="@+id/data_region"
        style="@style/TextStyle2"
        android:layout_width="130dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="214dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toBottomOf="@+id/row_region"
        app:layout_constraintEnd_toEndOf="@+id/row_region"
        app:layout_constraintStart_toStartOf="@+id/row_region"
        app:layout_constraintTop_toTopOf="@+id/row_region" />

    <TextView
        android:id="@+id/text_exit"
        style="@style/TextStyle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="452dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="51dp"
        android:text="@string/exit_text"
        app:layout_constraintBottom_toBottomOf="@+id/canvas"
        app:layout_constraintEnd_toEndOf="@+id/canvas"
        app:layout_constraintStart_toStartOf="@+id/canvas"
        app:layout_constraintTop_toTopOf="@+id/canvas" />

    <ImageView
        android:id="@+id/exit"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="449dp"
        android:layout_marginEnd="320dp"
        android:layout_marginBottom="54dp"
        android:src="@drawable/ic_menu_exit"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="@+id/canvas"
        app:layout_constraintEnd_toEndOf="@+id/canvas"
        app:layout_constraintStart_toStartOf="@+id/canvas"
        app:layout_constraintTop_toTopOf="@+id/canvas" />

    <ImageView
        android:id="@+id/r_edit"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="320dp"
        android:layout_marginTop="372dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="131dp"
        android:background="@drawable/r_edit"
        app:layout_constraintBottom_toBottomOf="@+id/canvas"
        app:layout_constraintEnd_toEndOf="@+id/canvas"
        app:layout_constraintStart_toStartOf="@+id/canvas"
        app:layout_constraintTop_toTopOf="@+id/canvas" />

    <ImageView
        android:id="@+id/canvas_edit"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:src="@drawable/ic_edit_black_24_px"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="@+id/r_edit"
        app:layout_constraintEnd_toEndOf="@+id/r_edit"
        app:layout_constraintStart_toStartOf="@+id/r_edit"
        app:layout_constraintTop_toTopOf="@+id/r_edit" />
</androidx.constraintlayout.widget.ConstraintLayout>